# dist_sys

./: .gitignore  Cargo.toml
scripts/: echo.sh  single-node_broadcast.sh  unique_id_generation.sh
src/: error.rs  lib.rs  message.rs
