[package]
name = "dist_sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"


[[bin]]
name = "echo"

[[bin]]
name = "unique_id_generation"

[[bin]]
name = "single_node_broadcast"
